--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,7 +10,9 @@ security:
                 class: App\Entity\Usuario
                 property: email
     role_hierarchy:
-        ROLE_ADMIN: ROLE_USER
+        ROLE_ADMIN: ROLE_ADMIN, ROLE_USER
+        ROLE_MANAGER: ROLE_MANAGER
+        ROLE_USER: ROLE_USER
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
