--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,10 @@
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
         "symfony/security-core": "7.0.*",
+        "symfony/stimulus-bundle": "^2.15",
         "symfony/string": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
+        "symfony/ux-chartjs": "^2.15",
         "symfony/validator": "7.0.*",
         "symfony/yaml": "7.0.*",
         "symfonycasts/verify-email-bundle": "^1.16",
