Directores, entidad SerieLista, fecha creacion entidades & registro admin: - Se crea la entidad Director asociada a Serie - Se crea la entidad SerieLista para asociar series y listas con la fecha de añadido - Se añade a las entidades el campo fecha_creacion - Si el usuario registrado es "admin" se le da "ROLE_ADMIN" - TODO: añadir a CRUDS fecha_creacion

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,6 +13,8 @@ security:
         ROLE_ADMIN: ROLE_ADMIN, ROLE_USER
         ROLE_MANAGER: ROLE_MANAGER
         ROLE_USER: ROLE_USER
+    # TODO: Redirect a página de acceso denegado que de opción a cambiar de usuario (Logout -> Login)
+    access_denied_url: /login
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
