--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/form": "7.0.*",
         "symfony/framework-bundle": "7.0.*",
         "symfony/http-foundation": "7.0.*",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/routing": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
