Ultimo Capitulo & Acceso Denegado: - Se añade a la entidad Capitulo la variable boolean "es_ultimo" para el contador de capítulos y temporadas - Se añade una página de acceso denegado que permite cerrar sesión

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,7 +14,7 @@ security:
         ROLE_MANAGER: ROLE_MANAGER
         ROLE_USER: ROLE_USER
     # TODO: Redirect a página de acceso denegado que de opción a cambiar de usuario (Logout -> Login)
-    access_denied_url: /login
+    access_denied_url: /accessDenied
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
